--- a/dom/colorgame/colorgame.css
+++ b/dom/colorgame/colorgame.css
@@ -14,25 +14,38 @@ body {
     padding-bottom: 30%;
     float:left;
     margin: 1.66%;
+    border-radius: 15%;
+    /* Not portable to all browsers w/o --webkit* */
+    transition: background .6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #colors {
     max-width: 600px;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
+    margin: 20px auto;
 }
 
 button {
     border: none;
-    background:none;
+    background: none;
     text-transform: uppercase;
     height: 100%;
     font-weight: 700;
     color: steelblue;
     letter-spacing: 1px;
     font-size: inherit;
+    /* apply to all properties - how to animate between changes*/
+    /* "all" is which property and .3s is the number of seconds */
+    transition: all .3s; 
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    outline: none;
 }
 
-button: hover {
+/*Doesn't work! */
+button:hover {
     color: white;
     background-color: steelblue;
 }
