--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,6 +1,8 @@
 <% include partials/header %>
 <h1>Campgrounds Page</h1>
 
+<a href="campgrounds/new">Add New Campground</a>
+
 <% campgrounds.forEach(function(campground) { %>
     <div>
         <h4><%= campground.name %></h4>
