--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,13 +1,31 @@
 <% include partials/header %>
-<h1>Campgrounds Page</h1>
 
-<a href="campgrounds/new">Add New Campground</a>
+<div class="container">
+    <!-- Like a div, with more semantic meaning -->
+    <header class="jumbotron">
+        <div class="container">
+            <h1>Welcome to YelpCamp!</h1>
+            <p>View our hand-picked campgrounds from all over the world.</p>
+            <p>
+                <a class="btn btn-primary btn-large" href="campgrounds/new">Add New Campground</a>
+            </p>
+        <div>
+    </header>
 
-<% campgrounds.forEach(function(campground) { %>
-    <div>
-        <h4><%= campground.name %></h4>
-        <img src="<%= campground.image %>"">
+    <!-- display: and flex-wrap will be put into a stylesheet later.
+    These are properties that help with the grids. -->
+    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+        <% campgrounds.forEach(function(campground) { %>
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail">
+                    <img src="<%= campground.image %>"">
+                    <div class="caption">
+                        <h4><%= campground.name %></h4>
+                    </div>
+                </div>
+            </div>
+        <% }) %>
     </div>
-<% }) %>
+</div>
 
 <% include partials/footer %>
