--- a/YelpCamp/views/new.ejs
+++ b/YelpCamp/views/new.ejs
@@ -1,16 +1,26 @@
 <% include partials/header %>
 
-<h1>Create a New Campground</h1>
-
-<!--The action is the post route.
-    The name is what's used to grab the data inside the route function
-    call.-->
-<form action="/campgrounds" method="POST">
-    <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image url">
-    <button>Submit</button>
-</form>
-
-<a href="/campgrounds">Go Back</a>
-
+<div class="container">
+    <div class="row">
+        <h1 style="text-align: center;">Create a New Campground</h1>
+        <!-- Break the no-inline rule for now -->
+        <div style="width: 40%; margin: 40px auto">
+            <!--The action is the post route.
+                The name is what's used to grab the data inside the route function
+                call.-->
+            <form action="/campgrounds" method="POST">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="name" placeholder="name">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="image" placeholder="image url">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Submit</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Go Back</a>
+        </div>
+    </div>
+</div>
 <% include partials/footer %>
