--- a/YelpCamp/views/index.ejs
+++ b/YelpCamp/views/index.ejs
@@ -19,7 +19,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnail">
                     <img src="<%= campground.image %>"">
-                    <div class="caption">
+                    <div style="margin: auto 0;" class="caption">
                         <h4><%= campground.name %></h4>
                     </div>
                     <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
