--- a/YelpCamp/views/show.ejs
+++ b/YelpCamp/views/show.ejs
@@ -1,3 +1,11 @@
-<h1>show template</h1>
+<% include partials/header %>
 
-<p><%=campground.name%></p>
+<div style="margin: auto 20px;" >
+    <h1><%=campground.name%></h1>
+
+    <img src=<%=campground.image%>>
+
+    <p style="margin: 10px 0;"><%= campground.description %></p>
+</div>
+
+<% include partials/footer %>
