V3 of the Yelp exercise.
Switched to Ski areas. Adding a link to a comments collections in the DB.

--- a/YelpSki/views/landing.ejs
+++ b/YelpSki/views/landing.ejs
@@ -3,5 +3,5 @@
 
 <p>Welcome to YelpSki</p>
 
-<a href="/campgrounds">View all Ski Areas</a>
+<a href="/skiareas">View all Ski Areas</a>
 <% include partials/footer %>
