--- a/YelpSki/views/new.ejs
+++ b/YelpSki/views/new.ejs
@@ -2,13 +2,13 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Create a New Campground</h1>
+        <h1 style="text-align: center;">Create a New Ski Area</h1>
         <!-- Break the no-inline rule for now -->
         <div style="width: 40%; margin: 40px auto">
             <!--The action is the post route.
                 The name is what's used to grab the data inside the route function
                 call.-->
-            <form action="/campgrounds" method="POST">
+            <form action="/skiareas" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="name" placeholder="name">
                 </div>
@@ -22,7 +22,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go Back</a>
+            <a href="/skiareas">Go Back</a>
         </div>
     </div>
 </div>
