--- a/YelpSki/views/partials/header.ejs
+++ b/YelpSki/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>YelpCamp</title>
+    <title>YelpSki</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- NOTE: the path to the CSS is prefixed with / because it needs to find it in the root directory,
          which is where it resides -->
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">YelpCamp</a>
+                <a class="navbar-brand" href="/">YelpSki</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
