Minor change to title.

--- a/YelpSki/views/index.ejs
+++ b/YelpSki/views/index.ejs
@@ -5,7 +5,7 @@
     <header class="jumbotron">
         <div class="container">
             <h1>Welcome to YelpSki!</h1>
-            <p>View our hand-picked ski areas from all over the US.</p>
+            <p>View our hand-picked ski areas from all over the Continental United States.</p>
             <p>
                 <a class="btn btn-primary btn-large" href="skiareas/new">Add New Ski Area</a>
             </p>
